# smart-meter-analysis

./: .gitignore  .pre-commit-config.yaml  .ruffignore  CONTRIBUTING.md  Dockerfile  Justfile  README.md  mkdocs.yml  pyproject.toml  test.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.devcontainer/devpod/: aws.sh
.secrets/: config.yaml
analysis/clustering/: clustering_validation.py  dtw_clustering.py  euclidean_clustering.py  euclidean_clustering_k_search.py  euclidean_clustering_minibatch.py  multinomial_regression.py  prepare_clustering_data.py  prepare_clustering_data_households.py  stage2_blockgroup_regression.py  stage2_logratio_regression.py  stage2_multinomial.py
analysis/pipelines/: chicago_sampler.py
analysis/rtp/: compute_hourly_loads.py  compute_household_bills.py
analysis/stage2/: stage2_multinom_blockgroup_weighted.R
archive/residential_load_viz_2024/: combine_chicago_zips.py  combine_chicago_zips_streaming.py  combine_with_april_boost.py  create_heatmap.py  create_heatmap_professional.py  create_visualization.py  create_visualizations_cm90.py  create_visualizations_enhanced.py  create_visualizations_final.py  create_visualizations_with_qc.py  generate_summary_table.py  sample_april_citywide.py  sample_chicago_all_2024.py  sample_chicago_multizip.py  sample_customers_60622.py  visualize_chicago_12months.py  visualize_chicago_12months_fixed.py
archive/residential_load_viz_2024/analysis/chicago_2024_full_year/final_visualizations/: summary_table.txt
archive/test_files/: fix_final.py
config/: monthly_run.yaml
docs/: .gitignore  index.html  index.md  index.qmd  modules.md
docs/testing/: 2024-12-20_month_parameterization.md
infra/: .gitignore  README.md  dev-login.sh  dev-setup.sh  dev-teardown-all.sh  dev-teardown.sh  first-login.sh  install-terraform.sh  main.tf  outputs.tf  user-data.sh  variables.tf
scripts/: 01_extract_cookies.py  02_get_file_list.py  03_transfer_files.py  04_verify_transfer.py  05_retry_failures.py  README.md  add_census_data_comed.py  build_rtp_spreads.py  extract_cookies.py  fetch_comed_data.py  fetch_rtp_prices.py  get_file_list.py  prepare_zip4_to_bg.py  process_csvs_batched_optimized.py  retry_failures.py  run_comed_pipeline.py  run_pipeline.py  transfer_files.py  validate_wide_to_long_batched.py  verify_transfer.py
scripts/analysis/: create_chicago_visualizations.py
scripts/bench/: eager_vs_lazy_benchmarks.py
scripts/csv_to_parquet/: PREFLIGHT_200.md  migrate_month_runner.py  validate_month_output.py
scripts/data_collection/: ameren_scraper.py
scripts/diagnostics/: inspect_dst_days.py  validate_pipeline.py
scripts/tasks/: task_runner.py
scripts/testing/: download_samples_from_s3.py  generate_sample_data.py
smart_meter_analysis/: .vdoc.2366e304-c67e-4aac-93fd-d02e7fb6d6eb.py  .vdoc.55c351ac-5bb3-4fc3-aa2e-7c51dad69f62.py  .vdoc.b41e7dc1-5e7b-4b9b-a588-f93d0875c31e.py  .vdoc.c6b324e9-1312-46ad-a2a7-df83bea3ca06.py  aws_loader.py  bg_usage_features.py  census.py  census_data.ipynb  census_data.qmd  census_specs.py  config.py  manifests.py  mock_zip4_to_bg.py  pipeline_validator.py  run_manifest.py  smart_meter_data_exploration.qmd  step0_aws.py  step0_transform.py  transformation.py  wide_to_long.py  zip4_from_s3key.py
smart_meter_analysis/notebooks/: analysis.qmd  census_data.qmd  comed_pricing.qmd  pricing_data.qmd  smart_meter_data_exploration.qmd  tract_zip_matching.qmd
tests/: diagnose_bg_density_v2.py  investigate_dst_values.py  investigate_duplicates.py  test.py  test_ameren_scraper.py  test_aws.py  test_aws_transform.py  test_census.py  test_foo.py  test_step0.py  validate_production_data.py  validate_total_comed_pipeline.py  validated_enrichment.py
