[project]
name = "smart-meter-analysis"
version = "0.0.1"
description = "This is the repo for the smart-meter-analysis project"
authors = [{ name = "Switchbox", email = "hello@switch.box" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.40.46",
    "botocore>=1.40.47",
    "cenpy>=1.0.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "polars>=1.31.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.32.0,<4.35.0",
]

[project.urls]
Homepage = "https://switchbox-data.github.io/smart-meter-analysis/"
Repository = "https://github.com/switchbox-data/smart-meter-analysis"
Documentation = "https://switchbox-data.github.io/smart-meter-analysis/"

[tool.deptry]
exclude = ["archive", ".venv", "tests"]
# Ignore dependencies that will be used soon
known_first_party = ["smart_meter_analysis"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "ipykernel>=6.30.1",
  "quarto>=0.1.0",
  "beautifulsoup4>=4.12.0",
  "webdriver-manager>=4.0.2",
  "cenpy",
  "ipykernel",
  "openpyxl",
  "scikit-learn",
  "pyarrow"
]
DEP003 = ["botocore"]
DEP004 = ["botocore"]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "polars>=1.34.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "boto3-stubs>=1.40.46",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smart_meter_analysis"]

[tool.mypy]
files = ["smart_meter_analysis"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
exclude = [
    "archive/",
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90",
    "E", "W", "F", "PGH", "UP", "RUF", "TRY",
]
ignore = ["E501", "E731"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/diagnostics/*.py" = ["C901"]
"smart_meter_analysis/pipeline_validator.py" = ["C901", "PGH003"]
"tests/test_aws_transform.py" = ["E402"]
"tests/test_census.py" = ["E402"]
"scripts/data_collection/*" = ["C901"]

[tool.ruff.format]
preview = true
