[project]
name = "smart-meter-analysis"
version = "0.0.1"
description = "This is the repo for the smart-meter-analysis project"
authors = [{ name = "Switchbox", email = "hello@switch.box" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.40.46",
    "botocore>=1.40.47",
    "cenpy>=1.0.1",
    "fsspec>=2026.1.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "memory-profiler>=0.61.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "polars>=1.31.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.37.0",
    "snakeviz>=2.2.2",
    "statsmodels>=0.14.5",
    "tslearn>=0.7.0",
]

[project.urls]
Homepage = "https://switchbox-data.github.io/smart-meter-analysis/"
Repository = "https://github.com/switchbox-data/smart-meter-analysis"
Documentation = "https://switchbox-data.github.io/smart-meter-analysis/"

[tool.deptry]
exclude = ["archive", ".venv", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "ipykernel",
  "cenpy",
  "openpyxl",
  "scikit-learn",
  "quarto",
  "beautifulsoup4",
  "webdriver-manager",
  "pyarrow",
  "memory-profiler",
  "snakeviz",
  "tslearn",
  "s3fs",
  "statsmodels",
]
DEP003 = ["botocore", "analysis", "smart_meter_analysis", "pandas", "scipy"]
DEP004 = ["botocore"]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "polars>=1.34.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "boto3-stubs>=1.40.46",
    "types-requests>=2.32.4.20250913",
    "types-pyyaml>=6.0.12.20250915",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smart_meter_analysis"]

[tool.mypy]
files = ["smart_meter_analysis"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["statsmodels.*", "sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "polars.*"
ignore_missing_imports = true

# Modules using polars (no stubs) or other untyped deps; allow Any from unfollowed imports
[[tool.mypy.overrides]]
module = ["smart_meter_analysis.wide_to_long", "smart_meter_analysis.transformation", "smart_meter_analysis.pipeline_validator", "smart_meter_analysis.census"]
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "cenpy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "smart_meter_analysis.census"
disable_error_code = ["import-untyped", "import-not-found", "unused-ignore"]

[[tool.mypy.overrides]]
module = "smart_meter_analysis.config"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "smart_meter_analysis.manifests"
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "botocore.exceptions"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
exclude = [
    "archive/",
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90",
    "E", "W", "F", "PGH", "UP", "RUF", "TRY",
]
ignore = ["E501", "E731"]
extend-ignore = ["TRY003", "TRY300", "TRY400"]

[tool.ruff.lint.per-file-ignores]
"scripts/run_comed_pipeline.py" = ["C901", "S603", "S607"]
"scripts/diagnostics/*.py" = ["C901"]
"smart_meter_analysis/pipeline_validator.py" = ["C901", "PGH003"]
"smart_meter_analysis/run_manifest.py" = ["S603", "S607"]
"smart_meter_analysis/aws_loader.py" = ["C901", "TRY301"]
"smart_meter_analysis/census.py" = ["C901"]
"tests/test_aws_transform.py" = ["E402"]
"tests/test_census.py" = ["E402"]
"scripts/data_collection/*" = ["C901"]
"analysis/clustering/clustering_validation.py" = ["C901", "F841", "RUF015"]
"analysis/clustering/stage2_logratio_regression.py" = ["C901"]
"analysis/clustering/stage2_multinomial.py" = ["C901"]
"tests/validate_total_comed_pipeline.py" = ["C901", "S603", "RUF001"]
"scripts/testing/generate_sample_data.py" = ["UP035", "UP006", "UP007", "S311"]
"scripts/csv_to_parquet/migrate_month_runner.py" = ["C901"]
"scripts/validate_wide_to_long_batched.py" = []
"smart_meter_analysis/wide_to_long.py" = ["C901"]
"tests/*" = ["S101", "RUF001"]


[tool.ruff.format]
preview = true
